226: Add missing SVGs
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/internal/server/ui/components/file_explorer/file_operations/download.templ
+++ b/internal/server/ui/components/file_explorer/file_operations/download.templ
@@ -8,7 +8,7 @@ templ download(pageState types.PageState) {
 		type="button"
 		class="p-2 rounded hover:bg-gray-200"
 		hx-on:click={ templ.JSFuncCall("downloadSelectedFiles", templ.JSExpression("event"), pageState.RootDir) }
-		title="Upload file"
+		title="Download selected files"
 	>
 		<svg
 			xmlns="http://www.w3.org/2000/svg"
