--- a/internal/server/ui/components/file_explorer/scripts.templ
+++ b/internal/server/ui/components/file_explorer/scripts.templ
@@ -94,10 +94,14 @@ templ scripts() {
         fileUploadArea.classList.add('bg-gray-800');
     }
 
+    function deleteSelectedFiles(event, rootDir) {
+        preventDefault(event);
+        console.log('Deleting files from', rootDir);
+    }
+
     function downloadSelectedFiles(event, rootDir) {
         preventDefault(event);
         console.log('Downloading files from', rootDir);
-
     }
 
     function dropFiles(event, rootDir) {
