--- a/internal/server/ui/components/file_explorer/file_operations/component.templ
+++ b/internal/server/ui/components/file_explorer/file_operations/component.templ
@@ -7,6 +7,7 @@ templ Component(pageState types.PageState) {
 		<div class="flex space-x-1">
 			@upload(pageState)
 			@download(pageState)
+			@delete(pageState)
 		</div>
 		<progress
 			id="file-upload-progress"
