--- a/internal/server/ui/components/file_explorer/file_operations/download.templ
+++ b/internal/server/ui/components/file_explorer/file_operations/download.templ
@@ -5,8 +5,9 @@ import "autobutler/internal/server/ui/types"
 templ download(pageState types.PageState) {
 	<button
 		id="file-download-button"
+		disabled
 		type="button"
-		class="p-2 rounded hover:bg-gray-200"
+		class="p-2 rounded hover:bg-gray-200 disabled:bg-gray-800 disabled:cursor-not-allowed"
 		hx-on:click={ templ.JSFuncCall("downloadSelectedFiles", templ.JSExpression("event"), pageState.RootDir) }
 		title="Download selected files"
 	>
