--- a/internal/server/ui/views/chat.templ
+++ b/internal/server/ui/views/chat.templ
@@ -12,7 +12,7 @@ import (
 )
 
 templ Chat(pageState types.PageState) {
-	{{ pageState.CurrentRoute = types.RouteChat }}
+	{{ pageState.CurrentPageName = types.PageChat }}
 	<!DOCTYPE html>
 	<html lang="en">
 		@header.Component()
