--- a/internal/server/ui/components/calendar/dayEvent.templ
+++ b/internal/server/ui/components/calendar/dayEvent.templ
@@ -1,8 +1,6 @@
 package calendar
 
-import (
-	"autobutler/pkg/calendar"
-)
+import "autobutler/pkg/calendar"
 
 func trimEventTitle(event calendar.Event, maxLen int) string {
 	title := event.Title
