192: Finish basic calendar without fake events
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/internal/server/ui/components/calendar/component.templ
+++ b/internal/server/ui/components/calendar/component.templ
@@ -15,4 +15,5 @@ templ Component(calendarView CalendarView) {
 			<p>Invalid Calendar View</p>
 		}
 	</div>
+	<script src="/public/scripts/calendar.js"></script>
 }
