--- a/internal/server/ui/components/calendar/monthView.templ
+++ b/internal/server/ui/components/calendar/monthView.templ
@@ -24,10 +24,10 @@ templ monthView(now time.Time) {
 			{{ previousMonth := now.AddDate(0, -1, 0) }}
 			{{ endOfPreviousMonth := calendar.GetFirstDayOfMonth(previousMonth).AddDate(0, 1, -1) }}
 			{{ dayCounter := -monthInfo.LeadingDays }}
-			for _ = range monthInfo.WeeksToRender {
+			for range monthInfo.WeeksToRender {
 				{{ renderDay := monthInfo.StartOfMonth.AddDate(0, 0, dayCounter) }}
 				<tr data-year={ renderDay.Year() } data-month={ calendar.MonthToInt(renderDay.Month()) }>
-					for _ = range calendar.Saturday + 1 {
+					for range calendar.Saturday + 1 {
 						{{ renderDay = monthInfo.StartOfMonth.AddDate(0, 0, dayCounter) }}
 						{{ dayTitle := "" }}
 						{{ outsideOfMonth := false }}
