--- a/internal/server/ui/components/file_explorer/file_operations/delete.templ
+++ b/internal/server/ui/components/file_explorer/file_operations/delete.templ
@@ -1,6 +1,10 @@
 package file_operations
 
-import "autobutler/internal/server/ui/types"
+import (
+	"autobutler/internal/server/ui/components/icons/trash"
+	"autobutler/internal/server/ui/types"
+	"fmt"
+)
 
 templ delete(pageState types.PageState) {
 	<button
@@ -8,24 +12,17 @@ templ delete(pageState types.PageState) {
 		disabled
 		type="button"
 		class="disabled p-2 rounded hover:bg-red-800 text-gray-600 hover:text-white disabled:bg-gray-800 disabled:cursor-not-allowed disabled:hover:text-gray-600"
-		hx-on:click={ templ.JSFuncCall("deleteSelectedFiles", templ.JSExpression("event"), pageState.RootDir) }
 		title="Delete selected files"
+		hx-trigger="click"
+		hx-delete="/api/v1/files"
+		hx-vals={ fmt.Sprintf(`js:{
+				rootDir: "%s",
+				filePaths: selectedFiles ,
+			}`, pageState.RootDir) }
+		hx-on::after-request={ templ.JSFuncCall("clearSelectedFiles") }
+		hx-target="#file-explorer"
+		hx-swap="outerHTML"
 	>
-		<svg
-			xmlns="http://www.w3.org/2000/svg"
-			class="inline w-6 h-6"
-			viewBox="0 0 24 24"
-			fill="none"
-			stroke="currentColor"
-			stroke-width="1.5"
-			stroke-linecap="round"
-			stroke-linejoin="round"
-		>
-			<path d="M6 7h12"></path>
-			<path d="M9 7V5a2 2 0 012-2h2a2 2 0 012 2v2"></path>
-			<path d="M19 7l-1 12a2 2 0 01-2 2H8a2 2 0 01-2-2L5 7"></path>
-			<path d="M10 11v8"></path>
-			<path d="M14 11v8"></path>
-		</svg>
+		@trash.Component()
 	</button>
 }
