sqlc: Use sqlc and migrate. Need to start using ONLY sqlc for queries though
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/internal/server/ui/components/calendar/monthView.templ
+++ b/internal/server/ui/components/calendar/monthView.templ
@@ -4,7 +4,7 @@ import "time"
 import "fmt"
 
 import "autobutler/pkg/calendar"
-import "autobutler/internal/db"
+import "autobutler/pkg/db"
 
 templ monthView(now time.Time) {
 	{{ monthInfo := calendar.NewMonthInfoFromTime(now) }}
