244: Add scrollbar when file list gets too long
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/internal/server/ui/components/file_explorer/component.templ
+++ b/internal/server/ui/components/file_explorer/component.templ
@@ -83,7 +83,7 @@ templ Component(pageState types.PageState, files []fs.FileInfo) {
 			if len(files) == 0 {
 				<span class="py-3 text-gray-500">No files found in { filepath.Join(util.GetFilesDir(), pageState.RootDir) }</span>
 			} else {
-				<ul id="file-explorer-list" class="divide-y divide-gray-200">
+				<ul id="file-explorer-list" class="divide-y divide-gray-200 max-h-[70vh] overflow-y-auto pr-4">
 					for _, file := range files {
 						@node.Component(pageState, file)
 					}
