--- a/internal/server/ui/components/file_explorer/dnd.templ
+++ b/internal/server/ui/components/file_explorer/dnd.templ
@@ -9,7 +9,7 @@ templ dnd(pageState types.PageState) {
 		hx-on:dragenter="activateDropZone(event)"
 		hx-on:dragover="preventDefault(event)"
 		hx-on:dragleave="deactivateDropZone(event)"
-		hx-on:drop={ templ.JSFuncCall("dropFiles", templ.JSExpression("event")) }
+		hx-on:drop={ templ.JSFuncCall("dropFiles", templ.JSExpression("event"), "", pageState.RootDir) }
 	>
 		Drop files here&#8230;
 	</div>
