--- a/internal/server/ui/components/file_explorer/explorer_context_menu/component.templ
+++ b/internal/server/ui/components/file_explorer/explorer_context_menu/component.templ
@@ -6,7 +6,7 @@ templ Component(pageState types.PageState) {
 	<div>
 		<ul
 			class="context-menu hidden absolute mt-2 w-28 bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded shadow-lg z-10"
-			hx-on:mouseleave="toggleContextMenu(null, this.parentElement)"
+			hx-on:mouseleave="closeContextMenu(null, this.parentElement)"
 		>
 			<li>
 				<button
