--- a/internal/server/ui/components/topnav/component.templ
+++ b/internal/server/ui/components/topnav/component.templ
@@ -13,13 +13,6 @@ templ Component(pageState types.PageState) {
 					<img src="/public/img/butler.png" height="24" width="24"/>
 				</a>
 			</li>
-			<li class="flex items-center text-gray-50">
-				if version.Semver == version.NoSemver {
-					<span class="font-thin">vX.Y.Z</span>
-				} else {
-					<span class="font-thin">{ version.Semver }</span>
-				}
-			</li>
 			for _, link := range pageState.NavLinks {
 				if link.Name == pageState.CurrentPageName {
 					<li class="flex items-center text-white bg-gray-700 underline font-bold">
@@ -31,47 +24,12 @@ templ Component(pageState types.PageState) {
 					</li>
 				}
 			}
-			<li class="flex ml-auto">
-				<div id="updateMenu" class="invisible">
-					<form
-						class="flex space-x-4 items-center"
-						onsubmit="return false;"
-						hx-post="/api/v1/update"
-						hx-target="#status"
-						hx-swap="innerHTML"
-					>
-						<div id="status"></div>
-						<input
-							id="versionInput"
-							type="text"
-							placeholder="v0.1.0 (Press enter to update)"
-							name="version"
-							class="flex-1 border bg-gray-400 dark:bg-white/10 border-gray/ dark:text-gray-100 dark:border-white/20 rounded-lg px-4 py-2 placeholder-gray-200 dark:placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500"
-						/>
-						<button
-							type="submit"
-							class="invisible"
-						></button>
-					</form>
-				</div>
-				<button
-					class="dark:text-gray-300 hover:text-white transition-colors"
-					hx-on:click="htmx.toggleClass('#updateMenu', 'invisible')"
-				>
-					<span class="sr-only">Update</span>
-					<svg
-						xmlns="http://www.w3.org/2000/svg"
-						class="h-5 w-5"
-						viewBox="0 0 24 24"
-						fill="none"
-						stroke="currentColor"
-					>
-						<path
-							stroke-width="2"
-							d="M1.7507,16.0022 C3.3517,20.0982 7.3367,23.0002 11.9997,23.0002 C18.0747,23.0002 22.9997,18.0752 22.9997,12.0002 M22.2497,7.9982 C20.6487,3.9012 16.6627,1.0002 11.9997,1.0002 C5.9247,1.0002 0.9997,5.9252 0.9997,12.0002 M8.9997,16.0002 L0.9997,16.0002 L0.9997,24.0002 M22.9997,0.0002 L22.9997,8.0002 L14.9997,8.0002"
-						></path>
-					</svg>
-				</button>
+			<li class="flex ml-auto mr-4 items-center text-gray-50">
+				if version.Semver == version.NoSemver {
+					<span class="font-thin">vX.Y.Z</span>
+				} else {
+					<span class="font-thin">{ version.Semver }</span>
+				}
 			</li>
 		</ul>
 	</nav>
