--- a/internal/server/ui/views/chat.templ
+++ b/internal/server/ui/views/chat.templ
@@ -6,7 +6,6 @@ import (
 	"autobutler/internal/server/ui/components/chat"
 	"autobutler/internal/server/ui/components/footer"
 	"autobutler/internal/server/ui/components/header"
-	"autobutler/internal/server/ui/components/topnav"
 	"autobutler/internal/server/ui/types"
 	"time"
 )
@@ -16,8 +15,7 @@ templ Chat(pageState types.PageState) {
 	<!DOCTYPE html>
 	<html lang="en">
 		@header.Component()
-		@topnav.Component(pageState)
-		@body.Component() {
+		@body.Component(pageState) {
 			@chat.Component(
 				[]llm.ChatMessage{
 					{Role: llm.ChatRoleSystem, Content: "Welcome to the Autobutler!", Timestamp: llm.GetTimestamp(time.Now())},
