--- a/internal/server/ui/views/home.templ
+++ b/internal/server/ui/views/home.templ
@@ -5,7 +5,6 @@ import (
 	"autobutler/internal/server/ui/components/footer"
 	"autobutler/internal/server/ui/components/header"
 	"autobutler/internal/server/ui/components/hero"
-	"autobutler/internal/server/ui/components/topnav"
 	"autobutler/internal/server/ui/types"
 )
 
@@ -14,8 +13,7 @@ templ Home(pageState types.PageState) {
 	<!DOCTYPE html>
 	<html lang="en">
 		@header.Component()
-		@topnav.Component(pageState)
-		@body.Component() {
+		@body.Component(pageState) {
 			@hero.Component()
 		}
 		@footer.Component()
