--- a/internal/server/ui/components/header/component.templ
+++ b/internal/server/ui/components/header/component.templ
@@ -8,24 +8,6 @@ templ Component() {
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<title>Autobutler - Your home assistant</title>
 		<link rel="icon" type="image/x-icon" href="/public/favicons/48x48.ico"/>
-		<style>
-            html, body {
-                margin: 0;
-                padding: 0;
-                min-height: 100vh;
-                min-width: 100vw;
-                overflow-x: hidden;
-            }
-
-            * {
-                margin: 0;
-                padding: 0;
-                box-sizing: border-box;
-            }
-
-            input[type=file]::file-selector-button {
-                display: none;
-            }
-        </style>
+		<link rel="stylesheet" href="/public/styles/site.css" type="text/css"/>
 	</head>
 }
