255: Remove feature grid and add another button for calendar
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/internal/server/ui/components/hero/cta_button.templ
+++ b/internal/server/ui/components/hero/cta_button.templ
@@ -1,20 +1,38 @@
 package hero
 
 templ ctaButton() {
-	<a
-		class="text-white bg-blue-600 hover:bg-blue-700 px-8 py-3 rounded-lg transition-colors duration-200 flex items-center space-x-2 mx-auto w-fit"
-		href="/files"
-	>
-		<span>Browse files</span>
-		<svg
-			xmlns="http://www.w3.org/2000/svg"
-			class="h-5 w-5"
-			viewBox="0 0 20 20"
-			fill="currentColor"
+	<div class="flex flex-col sm:flex-row gap-4 justify-center">
+		<a
+			class="text-white bg-blue-600 hover:bg-blue-700 px-8 py-3 rounded-lg transition-colors duration-200 flex items-center space-x-2 mx-auto w-fit"
+			href="/files"
 		>
-			<path
-				d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
-			></path>
-		</svg>
-	</a>
+			<span>Browse files</span>
+			<svg
+				xmlns="http://www.w3.org/2000/svg"
+				class="h-5 w-5"
+				viewBox="0 0 20 20"
+				fill="currentColor"
+			>
+				<path
+					d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
+				></path>
+			</svg>
+		</a>
+		<a
+			class="text-white bg-blue-600 hover:bg-blue-700 px-8 py-3 rounded-lg transition-colors duration-200 flex items-center space-x-2 mx-auto w-fit"
+			href="/calendar"
+		>
+			<span>Plan your year</span>
+			<svg
+				xmlns="http://www.w3.org/2000/svg"
+				class="h-5 w-5"
+				viewBox="0 0 20 20"
+				fill="currentColor"
+			>
+				<path
+					d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
+				></path>
+			</svg>
+		</a>
+	</div>
 }
